@@ -1,5 +1,12 @@
 2020-07-12  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-promo.c (pkl_promo_ps_forget_stmt): Normalize the
+	offset argument in `forget' statements.
+	* libpoke/pkl-gen.c (pkl_gen_ps_forget_stmt): New handler.
+	(pkl_phase_gen): Install handler.
+
+2020-07-12  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-insn.def: New instruction FLUSH.
 	* libpoke/pvm.jitter (flush): Likewise.
 
